# deck_media_watcher

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: publish-ghcr.yml
deck_media_watcher/: watchers.py
tests/: test_config.py  test_paths.py  test_state.py  test_telegram.py
watcher/: app.py  config.py  handler.py  paths.py  state.py  steam.py  telegram.py  watchers.py
