[tool.poetry]
name = "deck-media-watcher"
version = "0.1.0"
description = "Monitor Steam Deck screenshot and video folders, send screenshots to Telegram and upload videos to YouTube."
authors = ["Auto <auto@example.com>"]
readme = "README.md"
packages = [{ include = "deck_media_watcher" }]

[tool.poetry.dependencies]
python = "^3.11"
watchdog = "^3.0.0"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
google-api-python-client = "^2.108.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^1.0.0"

[tool.poetry.scripts]
deck-media-watcher = "main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

