[tool.poetry]
name = "deck-media-watcher"
version = "0.1.0"
description = "Monitor Steam Deck screenshots and send them to Telegram."
authors = ["Auto <auto@example.com>"]
readme = "README.md"
# Include the actual package directory present in the repo
packages = [{ include = "watcher" }]

[tool.poetry.dependencies]
python = "^3.11"
watchdog = "^3.0.0"
python-dotenv = "^1.0.0"
requests = "^2.31.0"

[tool.poetry.scripts]
# Expose CLI entrypoint from the package
deck-media-watcher = "watcher.app:main"

[tool.poetry.group.dev.dependencies]
ruff = "^0.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
